# Nova-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake-multi-platform.yml
app/: CMakeLists.txt
app/cmake/: nova-engine-config.cmake.in
app/engine/: engine.cpp
app/engine/data/: rollingbuffer.hpp
app/engine/graphics/: frame_info.hpp  graphics.cpp  window.cpp
app/engine/graphics/vulkan/: device.cpp  device.hpp  renderer.cpp  renderer.hpp
app/engine/modules/: module_manager.cpp  module_manager.hpp
app/engine/objects/: camera.cpp  object.cpp  scene.cpp
app/engine/primatives/: engine_config.cpp  transform.cpp
app/engine/systems/: gui_system.cpp  gui_system.hpp  system.cpp  system_manager.cpp
app/engine/utility/: config.cpp
app/include/: engine.hpp
app/include/graphics/: graphics.hpp  render_target.hpp  render_view.hpp  window.hpp
app/include/modules/: module.hpp
app/include/objects/: camera.hpp  object.hpp  scene.hpp  transformable.hpp  transformable_object.hpp
app/include/primatives/: engine_config.hpp  texture_2d.hpp  transform.hpp
app/include/primatives/abstract/: texture.hpp
app/include/systems/: system.hpp  system_manager.hpp  transformer.hpp
app/include/utility/: config.hpp  hash.hpp
demo/: CMakeLists.txt  main.cpp
docs/: ACT.MD
docs/development/: ACT.MD
examples/: CMakeLists.txt
examples/YourFirstProject/app/: CMakeLists.txt  main.cpp
modules/ExampleModule/: README.md
modules/ExampleModule/app/: CMakeLists.txt  fancy_util.cpp  module.cpp
modules/ExampleModule/app/include/: fancy_util.hpp  module.hpp
